# ToyC_compiler2

./: LICENSE  dune-project
_build/: log
_build/default/: ToyC_compiler.install
_build/default/lib/: lexer.mll  parser.conflicts  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  toyc_lib.cma
_build/install/default/lib/ToyC_compiler/: META  dune-package  lexer.ml  toyc_lib.cmi  toyc_lib.cmt  toyc_lib.cmx  toyc_lib.cmxa  toyc_lib.cmxs  toyc_lib.ml  toyc_lib__Ast.cmi  toyc_lib__Ast.cmt  toyc_lib__Ast.cmx  toyc_lib__Codegen.cmi  toyc_lib__Codegen.cmt  toyc_lib__Codegen.cmx  toyc_lib__Lexer.cmi  toyc_lib__Lexer.cmt  toyc_lib__Lexer.cmx  toyc_lib__Parser.cmi  toyc_lib__Parser.cmt  toyc_lib__Parser.cmti  toyc_lib__Parser.cmx  toyc_lib__Semantic.cmi  toyc_lib__Semantic.cmt  toyc_lib__Semantic.cmx
lib/: ast.ml  codegen.ml  dune  semantic.ml
test/: dune
